# smart-beaver

./: README.md  SOURCE.md
front-wizard/: Izapackage-lock.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
front-wizard/public/contract/: flipper.contract  flipper.json  flipper.wasm  incrementer.json  incrementer.wasm
front-wizard/src/: App.css  App.jsx  CodeTerminal.jsx  index.css  test.js
front-wizard/src/api/: BackendAPIHandler.js
front-wizard/src/components/: AccessControl.jsx  Buttons.jsx  Fake.jsx  FeaturesPSP22.jsx  FeaturesPSP37.jsx  InfoBox.jsx  Settings.jsx  Sidebar.jsx  Upgradeability.jsx  WalletConnectButton.jsx
front-wizard/src/contexts/: useFormData.js  useStandardSelect.js
front-wizard/src/form/: FormCheckbox.jsx  FormInput.jsx
front-wizard/src/utils/: contract.js  generalUtils.js
ink-build-server/: .gitignore  README.md  app.js  package-lock.json  package.json  pnpm-lock.yaml
ink-build-server/builder/: builderWraper.js
ink-build-server/contracts/: Cargo.toml  psp22.rs
ink-build-server/parser/: parser.js
ink-build-server/routes/: index.js
ink-smart-contracts/: README.md
ink-smart-contracts/contracts/tokens/psp22/: Cargo.toml  lib.rs
